<resources>
    <string name="app_name">Zevioo</string>
    <string name="start_subtitle">Reviews just for you.</string>
    <string name="start_register">Sign up with email</string>
    <string name="start_login">Already a member?</string>
    <string name="start_page_0_title">Check out thousands of genuine &amp; useful reviews.</string>
    <string name="start_page_1_title">Discover amazing products just for you.</string>
    <string name="start_page_2_title">Share your experiences, get fans &amp; followers.</string>

    <string name="registration_nick">Select a Nickname</string>
    <string name="registration_desc">2 words about you (e.g. food passionate, wine lover)</string>
    <string name="registration_pass">Password</string>
    <string name="registration_email">Email</string>
    <string name="registration_male">Man</string>
    <string name="registration_female">Woman</string>
    <string name="password_explain">Your password must be at least 8 characters</string>
    <string name="registrations_terms">I have read the Privacy Policy and agree to the Terms of Service.</string>
    <string name="registration_dob">Date of birth</string>
    <string name="validate_text1">We just sent a 4-digit verification code to the email you provided in the previous step.</string>
    <string name="validate_text2">Remember to use this email account when you shop online, in order to verify the products you have tried and receive reviews of “Veriﬁed purchases”. These reviews are far more credible and attract more followers. If you use more than one email accounts, you can add them all through your Proﬁle within the app.</string>
    <string name="validate_title">Put below the 4-digit code we sent you via email.</string>
    <string name="registration_deletion">Are you sure you want to cancel the registration process? All data will be removed.</string>
    <string name="validation_warning">Warning</string>
    <string name="gdpr_main_text">We save and process your personal data according to the latest European Regulation (GDPR), in order to oﬀer you personalised content and services. We work with companies that produce products to constantly improve the recommendations we send you. You have full control of all your data at any given time.</string>
    <string name="gdpr_main_action1">OK. I consent</string>
    <string name="gdpr_main_action2">Privacy configuration</string>
    <string name="gdpr_result">Accept all</string>
    <string name="gdpr_configuration_title">Privacy</string>
    <string name="gdpr_configuration_text">We collect and process the below personal data according to GDPR, in order to oﬀer you personalised services. However, you can always limit the process of your personal data and receive generic content and recommendations.</string>

    <string name="gdpr_preferences_title">Preferences</string>
    <string name="gdpr_reviews_title">Reviews</string>
    <string name="gdpr_purchases_title">Purchases &amp; Contacts</string>

    <string name="gdpr_dialog_title">Are you sure?</string>
    <string name="gdpr_dialog_message">Disable this option will result in receiving recommendations and services that are not so relevant, while all your existing data will be deleted</string>
    <string name="gdpr_dialog_ok">Yes, I’m sure</string>
    <string name="gdpr_dialog_no">Cancel</string>
    <string name="login_forgot_pass">Forgot my password.</string>


    <!-- GDPR preferences -->
    <string name="a1_title">Categories of interest</string>
    <string name="a1_description">If you disable this option you will receive recommendations for all categories.</string>
    <string name="a2_title">Favorites</string>
    <string name="a2_description">If you disable this option you will not be able to save products you like.</string>
    <string name="a3_title">Additional Profile information</string>
    <string name="a3_description">Zevioo uses AI technology to personalise every recommendation according to your special characteristics. If you disable this option you will receive generic content.</string>
    <string name="a4_title">Members I follow</string>
    <string name="a4_description">If you disable this option you will not be able to follow specific members while existing data will be deleted.</string>
    <string name="a5_title">Data sharing</string>
    <string name="a5_description">This option allows zevioo to share some of your personal data (without identifying you), like the products you like or you don’t, with other members and partners.</string>
    <!-- GDPR reviews -->
    <string name="b1_title">Rating &amp; comments</string>
    <string name="b1_description">If you disable this option you will not be able to review products. As a result, we will not know what you like and what you don’t in order to send you personalised recommendations.</string>
    <string name="b2_title">Useful or not</string>
    <string name="b2_description">If you disable this option you will not be able to ﬂag a review/recommendation as useful or not.. As a result, we will not know what you like and what you don’t in order to send you personalised recommendations.</string>
    <string name="b3_title">Communication with members</string>
    <string name="b3_description">If you disable this option you will not be able to communicate with other members through personal messages.</string>
    <string name="b4_title">Data sharing</string>
    <string name="b4_description">This option allows zevioo to share some of your personal data (without identifying you), like your ratings with your comments and the photos you upload, with other members and partners.</string>
    <!-- GDPR purchases -->
    <string name="c1_title">Purchase data</string>
    <string name="c1_description">We collect and process your purchase data from partner shops in order to select the products we will suggest you to review. If you disable this option we will not send you emails for review and your reviews will appear as “Not Veriﬁed Purchase” even if you have purchased the products you review.</string>
    <string name="c2_title">Contacts</string>
    <string name="c2_description">We collect contact information of your friends in order for you to invite them to our community and have them follow your posts. If you disable this option you will not be able to invite your friends while all your existing data will be deleted.</string>

    <!-- Personalize activity -->
    <string name="personalize_activity_title">We ’re almost done…</string>
    <string name="personalize_activity_subtitle">Show us your interests and we will customise the app to your preferences.</string>
    <string name="personalize_categories">Categories of interest</string>
    <string name="personalize_info">Additional personal information</string>
    <string name="personalize_notifications">Notifications &amp; Recommendations</string>
    <string name="personalize_label">You can set these options later from your Profile.</string>
    <string name="personalize_action">Later</string>

    <!-- Menus -->
    <string name="menu_register">Sign up</string>
    <string name="menu_login">Sign in</string>
    <string name="menu_next">Next</string>
    <string name="menu_done">Done</string>
    <!-- Permissions -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <!-- DEBUG MESSAGE FOR WRITE PERMISSION -->
    <string name="write_permission">Please enable write permission in order to be able to monitor database in the file system.</string>

    <!-- Snack bar messages -->
    <string name="low_connectivity">Limited network connectivity</string>
    <string name="snack_action">RETRY</string>
    <string name="snack_no_internet">Internet connection unavailable. Please connect to a network and try again</string>
    <string name="msg1">Creating your profile...</string>
    <string name="msg3">Logging in...</string>
    <string name="msg5">Validating...</string>
    <string name="msg2">Updating your profile...</string>

    <!-- Navigation Bottom -->
    <string name="tab_suggestions">Featured</string>
    <string name="tab_search">Search</string>
    <string name="tab_favorites">Favorites</string>
    <string name="tab_profile">Profile</string>
    <string name="tab_notifications">Notifications</string>

    <!-- Suggestions -->
    <string name="verified">Verified Purchase</string>
    <string name="useful_title">You consider the evaluation above helpful?</string>
    <string name="follow">Follow</string>


    <!-- Time passed -->
    <plurals name="hours">
        <item quantity="one">an hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>
    <plurals name="minutes">
        <item quantity="one">a minute ago</item>
        <item quantity="other">%d minutes ago</item>
    </plurals>
    <plurals name="seconds">
        <item quantity="one">a second ago</item>
        <item quantity="other">%d seconds ago</item>
    </plurals>
    <plurals name="days">
        <item quantity="one">a day ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>


    <plurals name="new_items">
        <item quantity="one">1 New suggestion</item>
        <item quantity="other">%d New suggestions</item>
    </plurals>

    <!-- Actions -->
    <string name="save_action_title">Save recommendation</string>
    <string name="save_action_subtitle">Add this recommendation to your favorites</string>
    <string name="unfollow_cat_action_title">Stop following member in this category</string>
    <string name="unfollow_cat_action_subtitle">Stop seeing recommendations from this member for this category</string>
    <string name="unfollow_action_title">Stop following member generally</string>
    <string name="unfollow_action_subtitle">Stop seeing recommendations from member</string>
    <string name="report_action_title">Report this post</string>
</resources>
