<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fitsSystemWindows="true" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:background="@color/gdpr_preferences_bg_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <RelativeLayout
                android:id="@+id/a1_layout"
                android:layout_width="match_parent"
                android:minHeight="32dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary">

                <TextView
                    android:id="@+id/a1_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/a1_title"
                    android:layout_marginEnd="8dp"
                    android:layout_toStartOf="@+id/a1_toggle"
                    android:layout_centerVertical="true" />

                <Switch
                    android:id="@+id/a1_toggle"
                    android:layout_width="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

            <TextView
                android:id="@+id/a1_explane"
                android:minHeight="16dp"
                android:text="@string/a1_description"
                android:layout_margin="8dp"
                android:textSize="12sp"
                android:textColor="@color/lighter_gray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/black" />
            <RelativeLayout
                android:id="@+id/a2_layout"
                android:layout_width="match_parent"
                android:minHeight="32dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary">

                <TextView
                    android:id="@+id/a2_title"
                    android:layout_width="match_parent"
                    android:text="@string/a2_title"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_toStartOf="@+id/a2_toggle"
                    android:layout_centerVertical="true" />

                <Switch
                    android:id="@+id/a2_toggle"
                    android:layout_width="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

            <TextView
                android:id="@+id/a2_explane"
                android:minHeight="16dp"
                android:layout_margin="8dp"
                android:textSize="12sp"
                android:text="@string/a2_description"
                android:textColor="@color/lighter_gray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/black" />
            <RelativeLayout
                android:id="@+id/a3_layout"
                android:layout_width="match_parent"
                android:minHeight="32dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary">

                <TextView
                    android:id="@+id/a3_title"
                    android:layout_width="match_parent"
                    android:text="@string/a3_title"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_toStartOf="@+id/a3_toggle"
                    android:layout_centerVertical="true" />

                <Switch
                    android:id="@+id/a3_toggle"
                    android:layout_width="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

            <TextView
                android:id="@+id/a3_explane"
                android:minHeight="16dp"
                android:text="@string/a3_description"
                android:layout_margin="8dp"
                android:textSize="12sp"
                android:textColor="@color/lighter_gray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/black" />
            <RelativeLayout
                android:id="@+id/a4_layout"
                android:layout_width="match_parent"
                android:minHeight="32dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary">

                <TextView
                    android:id="@+id/a4_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/a4_title"
                    android:layout_marginEnd="8dp"
                    android:layout_toStartOf="@+id/a4_toggle"
                    android:layout_centerVertical="true" />

                <Switch
                    android:id="@+id/a4_toggle"
                    android:layout_width="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

            <TextView
                android:id="@+id/a4_explane"
                android:minHeight="16dp"
                android:layout_margin="8dp"
                android:textSize="12sp"
                android:text="@string/a4_description"
                android:textColor="@color/lighter_gray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/black" />
            <RelativeLayout
                android:id="@+id/a5_layout"
                android:layout_width="match_parent"
                android:minHeight="32dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary">

                <TextView
                    android:id="@+id/a5_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/a5_title"
                    android:layout_marginEnd="8dp"
                    android:layout_toStartOf="@+id/a5_toggle"
                    android:layout_centerVertical="true" />

                <Switch
                    android:id="@+id/a5_toggle"
                    android:layout_width="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

            <TextView
                android:id="@+id/a5_explane"
                android:minHeight="16dp"
                android:layout_margin="8dp"
                android:textSize="12sp"
                android:text="@string/a5_description"
                android:textColor="@color/lighter_gray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/black" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>



</RelativeLayout>