<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/gdpr_bg_color"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fitsSystemWindows="true" />

    <ImageView
        android:id="@+id/icon_shield"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/toolbar"
        android:src="@drawable/shield"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp" />


        <TextView
            android:layout_below="@+id/icon_shield"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:id="@+id/text1"

            android:textSize="15sp"
            android:textColor="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/gdpr_main_text" />

    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_below="@+id/text1"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/action_one"
            android:layout_above="@+id/action_two"
            android:textColor="@color/gdpr_bg_color"
            android:text="@string/gdpr_main_action1"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/white_bg_round_corners"
            android:layout_width="match_parent"
            android:layout_height="48dp" />
        <TextView
            android:id="@+id/action_two"
            android:textColor="@color/colorPrimary"
            android:text="@string/gdpr_main_action2"
            android:gravity="center"
            android:textSize="15sp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="48dp" />


    </RelativeLayout>

</RelativeLayout>